@@ -5,12 +5,14 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: lambdabooks.kahua,v 1.2 2003/12/26 01:28:21 shiro Exp $
+;; $Id: lambdabooks.kahua,v 1.3 2003/12/26 22:44:37 shiro Exp $
 
+(use srfi-1)
+(use gauche.collection)
+(use gauche.logger)
 (use file.util)
 (use util.list)
 (use srfi-2)
-(use gauche.logger)
 
 (primary-database-name
  (build-path (ref (kahua-config) 'working-directory)
